--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,243 @@
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #b3b2b2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Dashboard */
+.header {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  background: linear-gradient(to bottom, #203E5F, #C0C0C0);
+  height:100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header > h2 {
+  color: #032c59;
+  margin-left: 20px;
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.header-options {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-links{
+  display: flex;
+}
+
+.header-links > a {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-decoration: none; 
+  color: #032c59;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 5px;
+}
+
+/* Search Bar */
+.search-bar {
+  display: flex;
+  padding: 10px;
+}
+
+.search-bar > input {
+  width: 350px;
+  border: 3px solid #032c59;
+  border-right: none;
+  padding: 5px;
+  height: 24px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.search-bar > button {
+  width: 39px;
+  height: 39px;
+  border: 1px solid #032c59;
+  background: #032c59;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.search-bar > input:focus{
+  font-size: 0.9rem;
+  color: black;
+}
+
+/* Carousel  */
+.slick-slider {
+  position: relative;
+  z-index: 1;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  box-sizing: border-box;
+  margin-top: 20px;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  text-align: center;
+}
+
+.slick-slide img {
+  display: block;
+  width: 80%;
+  height: auto;
+  margin: 0 auto; 
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.slick-dots li {
+  margin: 0 5px;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+/* Grid Layout */
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 20px;
+  padding: 20px;
+  margin:100px;
+}
+
+.grid-item {
+  position: relative;
+  background-color: #e2e2e2ba;
+  padding: 20px;
+  text-align: center;
+}
+
+.grid-item img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
+
+.btns {
+  display: flex;
+  justify-content: center;
+}
+
+.fav-icon{
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+.later-icon {
+  position: absolute;
+  bottom: 5px;
+  right: 30px;
+  margin-right: 10px;
+}
+
+.later-icon > img {
+  width: 15px;
+  height: 15px;
+}
+
+/* Favorite Movies */
+.fav-container > h1 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+}
+
+.fav-container > p {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.remove-btn {
+  background-color: #032c59;
+  color: #ffffff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+/* Watch Later */
+.later-container > h1 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+}
+
+.later-container > p {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Genre/ Year Filter */
+.filter-section {
+  /* background-color: red; */
+  margin-top: 40px;
+  margin: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.filter {
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #032c59;
+  border-radius: 4px;
+  background-color: #032c59;
   color: white;
+  width: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+.filter option {
+  font-size: 14px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
